Fix Header Background Not Showing Issue

--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -184,7 +184,7 @@ body {
         }
     }
 
-    #vehicle-details, #compare {
+    #vehicle-details, #compare, #add-ons, #policy-holder, #payment-summary {
         .header {
             background-image: url(../images/policy-header.png);
         }
